--- a/.env
+++ b/.env
@@ -13,12 +13,12 @@ ESKIZ_EMAIL2=MENEJER-77@MAIL.RU
 ESKIZ_EMAIL=elshodatc1116@gmail.com
 ESKIZ_PASSWORD2=oncq32Eg8mL0zEdrktW7vNB2amdNzwJtg2oKwJHS
 ESKIZ_PASSWORD=XZ5PtofNrSRWN2Xp9n5PrbMJmVt2k59Xym1FquDU
-MESSEGE_TEXT='Shaxsiy kabinet: https://atko.tech/login'
+MESSEGE_TEXT='Shaxsiy kabinet: https://crm.atko.tech/'
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=atkocrm
 DB_USERNAME=root
 DB_PASSWORD=
 
