--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ MESSEGE_TEXT='Shaxsiy kabinet: https://crm.atko.tech/'
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=atkocrm
+DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
